--- a/src/css/mibreit-thumbview.css
+++ b/src/css/mibreit-thumbview.css
@@ -27,7 +27,9 @@
 }
 
 .mibreit-thumbElement img {
+    margin: auto;
     padding: 0px;
+    align-self: center;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -35,4 +37,5 @@
     text-indent: 100%;
     white-space: nowrap;
     overflow: hidden;
+    flex-shrink: 0;
 }
